syntax = "proto3";

package database;
 
import "common.proto";
import "google/protobuf/timestamp.proto";

service Database {
  rpc LogEvent(Event) returns (common.StatusReply);
  rpc AddGuild(Guild) returns (common.StatusReply);
  rpc RemoveGuild(GuildSearchId) returns (common.StatusReply);
  rpc GetGuild(GuildSearchId) returns (Guild);

}

message Guild {
  string id = 1;
  string name = 2;
  string icon = 5;
}

message GuildSearchId {
  string id = 1;
}

message Event {
  google.protobuf.Timestamp  createdAt = 1;
  string discordEvent = 2;
  string discordGuildId = 3;
  string discordUserId = 4;
}

